--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mailerlite/mailerlite-nodejs": "^1.3.0",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^11.3.30",
     "i": "^0.3.7",
