--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
