--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.6",
     "@vercel/analytics": "^1.1.1",
     "next": "14.0.3",
     "react": "^18",
